# infer-server

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
cmake/: FindFFmpegRK.cmake  FindRGA.cmake  FindRKNN.cmake  FindTurboJPEG.cmake  FindZMQ.cmake
config/: server.json  server.json.bak  server_test.json
docs/: api_reference.md  plan.md  testing_guide.md
include/infer_server/api/: rest_server.h
include/infer_server/cache/: image_cache.h  jpeg_encoder.h
include/infer_server/common/: bounded_queue.h  config.h  logger.h  types.h
include/infer_server/decoder/: hw_decoder.h
include/infer_server/inference/: frame_result_collector.h  infer_worker.h  inference_engine.h  model_manager.h  post_processor.h
include/infer_server/output/: zmq_publisher.h
include/infer_server/processor/: rga_processor.h
include/infer_server/stream/: stream_manager.h
src/: main.cpp
src/api/: rest_server.cpp
src/cache/: image_cache.cpp  jpeg_encoder.cpp
src/common/: config.cpp  logger.cpp
src/decoder/: hw_decoder.cpp
src/inference/: infer_worker.cpp  inference_engine.cpp  model_manager.cpp  post_processor.cpp
src/output/: zmq_publisher.cpp
src/processor/: rga_processor.cpp
src/stream/: stream_manager.cpp
tests/: CMakeLists.txt  test_bounded_queue.cpp  test_config.cpp  test_decode_pipeline.cpp  test_frame_result_collector.cpp  test_hw_decoder.cpp  test_image_cache.cpp  test_infer_pipeline.cpp  test_model_manager.cpp  test_post_process.cpp  test_rest_api.cpp  test_rga_processor.cpp  test_system.cpp  test_zmq_publisher.cpp  zmq_subscriber.cpp
